Add README explaining Java 17 compatibility changes